@@ -13,13 +13,15 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: stdlib.h,v 1.4 2008/05/02 10:28:18 dkf Exp $
+ * RCS: @(#) $Id: stdlib.h,v 1.5 2010/04/20 08:17:26 nijtmans Exp $
  */
 
 #ifndef _STDLIB
 #define _STDLIB
 
-#include <tcl.h>
+#ifndef _TCL
+#   include <tcl.h>
+#endif
 
 extern void		abort(void);
 extern double		atof(const char *string);
